# xi-9000

./: Cargo.toml  memory.x  readme.md
docs/: enclosure.scad  enclosure.stl  ui.sketch
src/: app.rs  display.rs  main.rs  pins.rs
