[package]
name = "xi-9000"
description = "Хлібний інкубатор 9000"
repository = "https://github.com/dotcypress/xi-9000"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"
version = "0.0.0"

[dependencies]
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
klaptik = { version = "0.2.1", features = ["fx", "st7567"] }
panic-halt = "0.2.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"], optional = true }
pid-loop = "0.0.6"
stm32g0xx-hal = { version = "0.2.0", features = ["rt", "stm32g030"] }

[features]
probe = ["dep:panic-probe"]

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"
